sbms/sb-demo-no-db/src/main/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-demo-service
spec:
  selector:
    app: sb-demo   # must match Deployment label
  ports:
    - protocol: TCP
      port: 9000        # Service port
      targetPort: 9000  # Container port
  type: ClusterIP
