sbms/sb-demo-no-db/src/main/resources/app-singlefile-appraoch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sb-demo
  template:
    metadata:
      labels:
        app: sb-demo
    spec:
      containers:
        - name: sb-demo
          image: docker.io/kamaltechlearn/sb-demo:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sb-demo-service
spec:
  selector:
    app: sb-demo
  ports:
    - port: 9000
      targetPort: 9000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sb-demo-route
spec:
  to:
    kind: Service
    name: sb-demo-service
  port:
    targetPort: 9000
  tls:
    termination: edge
