sbms/sb-demo-no-db/src/main/resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sb-demo-route
spec:
  to:
    kind: Service
    name: sb-demo-service
  port:
    targetPort: 9000
  tls:
    termination: edge
